create app.js 1-5

--- a/basic/index2.html
+++ b/basic/index2.html
@@ -8,7 +8,11 @@
   <title>ABOUT SOCOTRA</title>
   <link rel="stylesheet" href="./style2.css">
   <link rel="stylesheet" href="./reset.css">
+  <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+ <script defer src="./app2.js"></script>
+
 </head>
+
 <body>
   <!-- ヘッダー -->
   <header>
@@ -18,11 +22,12 @@
         <nav class="nav-title">
           <ul class="flexbox">
             <li><a href="./index.html">TOP</a></li>
-            <li><a href="./index2.html">ABOUT</a></li>
+            <li><a href="./index2.html" class="current">ABOUT</a></li>
             <li><a href="./index3.html">SEA</a></li>
             <li><a href="./index4.html">PLANTS</a></li>
             <li><a href="./index5.html">CONTACT</a></li>
           </ul>
+          <span></span>
         </nav>
       </div> 
     </div>
