--- a/basic/index3.html
+++ b/basic/index3.html
@@ -7,6 +7,8 @@
   <title>SEA</title>
   <link rel="stylesheet" href="./style3.css">
   <link rel="stylesheet" href="./reset.css">
+  <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+ <script defer src="./app3.js"></script>
 </head>
 
 <body>
@@ -18,10 +20,11 @@
           <ul class="flexbox">
             <li><a href="./index.html">TOP</a></li>
             <li><a href="./index2.html">ABOUT</a></li>
-            <li><a href="./index3.html">SEA</a></li>
+            <li><a href="./index3.html" class="current">SEA</a></li>
             <li><a href="./index4.html">PLANTS</a></li>
             <li><a href="./index5.html">CONTACT</a></li>
           </ul>
+          <span></span>
         </nav>
       </div> 
     </div>
