--- a/basic/index5.html
+++ b/basic/index5.html
@@ -6,6 +6,9 @@
   <title>CONTACT</title>
   <link rel="stylesheet" href="./style5.css">
   <link rel="stylesheet" href="./reset.css">
+  <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script defer src="./app5.js"></script>
+
 </head>
 
 
@@ -20,8 +23,9 @@
             <li><a href="./index2.html">ABOUT</a></li>
             <li><a href="./index3.html">SEA</a></li>
             <li><a href="./index4.html">PLANTS</a></li>
-            <li><a href="./index5.html">CONTACT</a></li>
+            <li><a href="./index5.html" class="current">CONTACT</a></li>
           </ul>
+          <span></span>
         </nav>
       </div> 
     </div>
