--- a/basic/index.html
+++ b/basic/index.html
@@ -20,12 +20,13 @@
       <div class="title">秘境・ソコトラ島</div>
       <nav class="nav-title">
         <ul class="flexbox">
-          <li><a href="./index.html">TOP</a></li>
+          <li><a href="./index.html" class="current">TOP</a></li>
           <li><a href="./index2.html">ABOUT</a></li>
           <li><a href="./index3.html">SEA</a></li>
           <li><a href="./index4.html">PLANTS</a></li>
           <li><a href="./index5.html">CONTACT</a></li>
         </ul>
+        <span></span>
       </nav>
     </div> 
   </div>
