--- a/basic/index4.html
+++ b/basic/index4.html
@@ -7,6 +7,9 @@
   <title>PLANTS</title>
   <link rel="stylesheet" href="./style4.css">
   <link rel="stylesheet" href="./reset.css">
+  <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script defer src="./app4.js"></script>
+
 </head>
 <body>
   <header>
@@ -18,9 +21,10 @@
             <li><a href="./index.html">TOP</a></li>
             <li><a href="./index2.html">ABOUT</a></li>
             <li><a href="./index3.html">SEA</a></li>
-            <li><a href="./index4.html">PLANTS</a></li>
+            <li><a href="./index4.html" class="current">PLANTS</a></li>
             <li><a href="./index5.html">CONTACT</a></li>
           </ul>
+          <span></span>
         </nav>
       </div> 
     </div>
