--- a/basic/index2.html
+++ b/basic/index2.html
@@ -36,7 +36,7 @@
   <!-- 説明 -->
   <div class="flex">
     <div class="item">
-      <h1>ソコトラ島について</h1>
+      <h1><span class="c-marker js-markerScrollAnimation">ソコトラ島について</span></h1>
       <p>ソコトラ島は、イエメンのインド洋上に浮かぶ島です。<br>
       独特の生態系と、その奇観から2008年世界遺産に登録されました。<br>動植物が独自の系統的進化を遂げ、様々な固有種が存在しているため「インド洋のガラパゴス」とも呼ばれます。</p>
     </div>
@@ -50,7 +50,7 @@
 
 
   <footer>
-    <p>© copyright AKARI</p>
+    <p class="footer-text">© copyright AKARI</p>
   </footer>
 
   
