--- a/basic/index3.html
+++ b/basic/index3.html
@@ -33,7 +33,7 @@
   <!-- 説明 -->
   <div class="flex">
     <div class="item">
-      <h1>コバルトブルーの海</h1>
+      <h1><span class="c-marker js-markerScrollAnimation">コバルトブルーの海</span></h1>
       <p>美しいコバルトブルーの海が島を取り囲みます<br>自然保護区のデトワ・ラグーンには、真っ白な砂丘が広がっています。<br>岸からすぐ近くにサンゴ礁の広がる地帯もあり、シュノーケリングなども楽しめます。</p>
     </div>
     <div class="item">
