--- a/basic/index4.html
+++ b/basic/index4.html
@@ -33,7 +33,7 @@
   <!-- 説明 -->
   <div class="flex">
     <div class="item">
-      <h1>ソコトラ島固有の植物</h1>
+      <h1><span class="c-marker js-markerScrollAnimation">ソコトラ島固有の植物</span></h1>
       <p>多種多様な固有植物がソコトラ島には自生しています。<br>中でも有名なのが、赤い樹液を有するドラゴンツリー。そして、太い幹から枝を数本伸ばし、先端にわずかな花と葉をつけるボトルツリー。<br>その他にも多くの特殊な植物を見かけることができます。</p>
     </div>
     <div class="item">
