--- a/basic/index5.html
+++ b/basic/index5.html
@@ -31,29 +31,26 @@
     </div>
   </header>
 
-  <p class="lead-form">CONTACT FORM</p>
+  <h1 class="contact-title">CONTACT</h1>
 
-  <form>
-    <div class="item">
-      <label class="label">NAME</label>
-      <input class="inputs" type="text" name="name">
+  <div class="form">
+    <div class="contact-box">
+        <div>
+            <p>NAME</p>
+            <p><input type="text" name="name"/></p>
+        </div>
+        <div>
+            <p>MAIL</p>
+            <p><input type="email" name="mail"/></p>
+        </div>
+        <div>
+            <p>MESSAGE</p>
+            <textarea name="content"></textarea>
+        </div>
+        <input type="submit" value="SEND"/>
+        
     </div>
-
-    <div class="item">
-      <label class="label">MAIL</label>
-      <input class="inputs" type="email" name="email">
-    </div>
-
-    <div class="item">
-      <label class="label">MESSAGE</label>
-      <textarea class="inputs"></textarea>
-    </div>
-
-    <div class="btn-area">
-      <input type="submit" value="SEND">
-    </div>
-
-  </form>
+</div>
 
 
 
