--- a/basic/index5.html
+++ b/basic/index5.html
@@ -9,7 +9,7 @@
   <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script defer src="./app5.js"></script>
 
-</head>
+  </head>
 
 
 <body>
@@ -35,25 +35,29 @@
 
   <div class="form">
     <div class="contact-box">
-        <div>
-            <p>NAME</p>
-            <p><input type="text" name="name"/></p>
-        </div>
-        <div>
-            <p>MAIL</p>
-            <p><input type="email" name="mail"/></p>
-        </div>
-        <div>
-            <p>MESSAGE</p>
-            <textarea name="content"></textarea>
-        </div>
-        <input type="submit" value="SEND"/>
-        
+      <div>
+        <p>NAME</p>
+        <p><input type="text" name="name"/></p>
+      </div>
+      <div>
+        <p>MAIL</p>
+        <p><input type="email" name="mail"/></p>
+      </div>
+      <div>
+        <p>MESSAGE</p>
+        <textarea name="content"></textarea>
+      </div>
+       <input type="submit" value="SEND"/>
+            
     </div>
+  </div>
+
+    </div>
+  </div>
 </div>
 
 
-
+<canvas id="sineCanvas" width="800" height="300"></canvas>
 
 
 
