--- a/basic/index.html
+++ b/basic/index.html
@@ -17,7 +17,7 @@
 <header>
   <div class="inner">
     <div class="flexbox">
-      <div class="title">ソコトラ島</div>
+      <div class="title">秘境・ソコトラ島</div>
       <nav class="nav-title">
         <ul class="flexbox">
           <li><a href="./index.html" class="current">TOP</a></li>
